# boatLang

./: .gitignore  Cargo.toml  index.html
.github/workflows/: wasm-pages.yml
cli/: Cargo.toml
cli/src/: main.rs
pkg/: boat_lang_web.d.ts  boat_lang_web.js  boat_lang_web_bg.wasm  boat_lang_web_bg.wasm.d.ts  package.json
programs/: ball.boat  factorial.boat  fib.boat  functions.boat  if.boat  out.boat  parsing_error.boat  test_display.boat  test_goto.boat  test_redef.boat
src/: base.pest  boat_instructions.rs  boat_program.rs  expr.pest  expr_optimizer.rs  expr_parser.rs  expr_translator.rs  interpreter.rs  lib.rs  main.rs  program.pest  program_optimizer.rs  program_parser.rs  program_translator.rs
stack computer/: filelist.xml  stack computer.sub
web/: Cargo.toml
web/pkg/: boat_lang_web.js  boat_lang_web_bg.wasm
web/src/: lib.rs
