[package]
name = "boat_lang"
version = "0.1.0"
edition = "2021"
default-run = "boat-lang-compiler-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest="2.7.6"
pest_derive="2.7.6"
lazy_static = "1.4.0"
xflags = "0.3.2"

[[bin]]
name="boat-lang-compiler-cli"
path="src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name="boat_lang_web"
path="src/lib.rs"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen="0.2.91"
