[package]
name = "boat_lang"
version = "0.1.0"
edition = "2021"
# default-run = "boat-lang-compiler-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest="2.7.6"
pest_derive="2.7.6"
lazy_static = "1.4.0"

[workspace]
members = [
    "cli",
    "web"
]
default-members = [
    "cli"
]

[lib]
crate-type = ["staticlib", "rlib"]
name="boat_lang_core"
path="src/lib.rs"
